# storage/api-docs/api-docs.json
@@ -63,10 +63,6 @@
                                     "name": {
                                         "type": "string"
                                     },
-                                    "line_manager_name": {
-                                        "description": "Optional",
-                                        "type": "string"
-                                    }
                                 },
                                 "type": "object"
                             }
@@ -116,10 +112,6 @@
                                     "name": {
                                         "type": "string"
                                     },
-                                    "line_manager_name": {
-                                        "description": "Optional",
-                                        "type": "string"
-                                    }
                                 },
                                 "type": "object"
                             }
